2014-11-17  Paul Eggert  <eggert@cs.ucla.edu>

	Improve time stamp handling, and be more consistent about it.
	This implements a suggestion made in:
	http://lists.gnu.org/archive/html/emacs-devel/2014-10/msg00587.html
	Among other things, this means timer.el no longer needs to
	autoload the time-date module.
	* time-date.el (seconds-to-time, days-to-time, time-since):
	Simplify by using new functionality.
	(with-decoded-time-value):
	Treat 'nil' as current time.  This is mostly for XEmacs.
	(encode-time-value, with-decoded-time-value): Obsolete.
	(time-add, time-subtract, time-less-p): Use no-op autoloads, for
	XEmacs.  Define only if XEmacs, as they're now C builtins in Emacs.

2014-11-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-exit-no-update): Don't query about
	discarding changes in ephemeral groups.

	* ietf-drums.el (ietf-drums-parse-address): Don't issue warnings about
	things the user isn't interested in.

2014-11-13  Julien Danjou  <jd@abydos>

	* gnus-notifications.el (gnus-notifications-notify): Provide both
	app-icon and image-path.

2014-11-10  Kenjiro NAKAYAMA  <nakayamakenjiro@gmail.com>

	* mm-url.el (mm-url-encode-multipart-form-data):
	Restore to handle "multipart/form-data" by eww.

2014-11-07  Tassilo Horn  <tsdh@gnu.org>

	* gnus-start.el (gnus-activate-group): Fix typo reported by Tim
	Landscheidt.

2014-10-29  Paul Eggert  <eggert@cs.ucla.edu>

	Simplify use of current-time and friends.
	* gnus-delay.el (gnus-delay-article):
	* gnus-sum.el (gnus-summary-read-document):
	* gnus-util.el (gnus-seconds-today, gnus-seconds-month):
	* message.el (message-make-expires-date):
	Omit unnecessary call to current-time.
	* gnus-util.el (gnus-float-time): Simplify to an alias because
	time-to-seconds now behaves like float-time with respect to nil arg.
	(gnus-seconds-year): Don't call current-time twice to get the current
	time stamp, as this can lead to inconsistent results.
	* time-date.el (time-to-seconds) [!float-time]: